RESOLVED FIXED129634
[iOS][WK1] Crash in HTMLMediaElement::createElementRenderer() - "-[NSSet addObject:]: object cannot be nil"
https://bugs.webkit.org/show_bug.cgi?id=129634
Summary [iOS][WK1] Crash in HTMLMediaElement::createElementRenderer() - "-[NSSet addO...
Jer Noble
Reported 2014-03-03 16:05:46 PST
[iOS][WK1] Crash in HTMLMediaElement::createElementRenderer() - "-[NSSet addObject:]: object cannot be nil"
Attachments
Patch (1.60 KB, patch)
2014-03-03 16:08 PST, Jer Noble
no flags
Jer Noble
Comment 1 2014-03-03 16:08:26 PST
WebKit Commit Bot
Comment 2 2014-03-10 09:22:22 PDT
Comment on attachment 225706 [details] Patch Clearing flags on attachment: 225706 Committed r165376: <http://trac.webkit.org/changeset/165376>
WebKit Commit Bot
Comment 3 2014-03-10 09:22:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.