[iOS][WK1] Crash in HTMLMediaElement::createElementRenderer() - "-[NSSet addObject:]: object cannot be nil" https://bugs.webkit.org/show_bug.cgi?id=129634

Reviewed by Eric Carlson.

If a plugin fails to create a NSView, a nil object is inserted into the WebPluginController's
pluginViews set. This is an exceptional case, so add an ASSERT so that this error will continue
to occur in debug builds, but also add an early return so as not to crash release builds.

* Plugins/WebPluginController.mm:
(+[WebPluginController addPlugInView:]):


Canonical link: https://commits.webkit.org/148001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165376 268f45cc-cd09-0410-ab3c-d52691b4dbfc